feat: initial support stream
